# udp-kernel-timestamp-example

./: CMakeLists.txt
receiver/: CMakeLists.txt  main.cpp
sender/: CMakeLists.txt  main.cpp
